apps/clubs/capra/wiki/prod/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: wikijs-ingress
spec:
  virtualhost:
    fqdn: wiki.capra.etsmtl.ca
    tls:
      secretName: capra-wikijs-tls
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      services:
        - name: wiki
          port: http
